--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 	},
 	"preferGlobal": true,
 	"scripts": {
-		"preinstall": "npx npm-force-resolutions",
+		"preinstall": "npm install --package-lock-only --ignore-scripts && npx npm-force-resolutions",
 		"prepare.back": "yarn run clean && yarn run eslint && yarn run stylint && yarn run test && yarn run build",
 		"prebuild-latest": "yarn run package-sync && bash -c \"cd src; yarn version ${yarn_package_version}-${COMMIT_COUNT:-latest}\" && bash scripts/prebuild-prod.sh",
 		"prebuild-dev": "yarn run package-sync && bash scripts/prebuild-dev.sh",
