--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   },
   "main": "./dist/gladius/server-cli.js",
   "bin": {
-    "gladius": "./bin/gladius",
-    "cnc": "./bin/cnc"
+    "gladius": "./bin/gladius"
   },
   "files": [
     "bin",
@@ -143,6 +142,7 @@
   "dependencies": {
     "@babel/polyfill": "~7.4.3",
     "@babel/runtime": "~7.4.3",
+    "@fortawesome/fontawesome-free": "~5.15.3",
     "@trendmicro/react-anchor": "~0.5.6",
     "@trendmicro/react-breadcrumbs": "~0.5.5",
     "@trendmicro/react-buttons": "~1.3.1",
@@ -195,7 +195,6 @@
     "express-jwt": "~5.3.1",
     "express-session": "~1.16.1",
     "final-form": "~4.12.0",
-    "font-awesome": "~4.7.0",
     "frac": "~1.1.2",
     "gcode-interpreter": "~2.1.0",
     "gcode-parser": "~1.3.6",
@@ -228,6 +227,7 @@
     "opencollective": "~1.0.3",
     "perfect-scrollbar": "~1.4.0",
     "prop-types": "~15.7.2",
+    "prop-types-extra": "^1.1.1",
     "pubsub-js": "~1.7.0",
     "push.js": "~1.0.9",
     "qs": "~6.7.0",
@@ -235,6 +235,7 @@
     "rc-slider": "~8.6.9",
     "react": "~15.6.2",
     "react-bootstrap": "~0.32.1",
+    "react-bootstrap-submenu": "^1.0.2",
     "react-dom": "~15.6.2",
     "react-dropzone": "~4.2.13",
     "react-facebook-loading": "~0.6.2",
@@ -260,7 +261,7 @@
     "registry-url": "~5.1.0",
     "rimraf": "~2.6.3",
     "semver": "~6.0.0",
-    "serialport": "~7.1.5",
+    "serialport": "~9.2.0",
     "serve-favicon": "~2.5.0",
     "serve-static": "~1.13.2",
     "session-file-store": "~1.2.0",
@@ -304,8 +305,9 @@
     "css-loader": "~2.1.1",
     "css-split-webpack-plugin": "~0.2.6",
     "dotenv": "~7.0.0",
-    "electron": "~4.2.12",
+    "electron": "~13.1.2",
     "electron-builder": "~22.8.1",
+    "electron-debug": "^3.2.0",
     "electron-rebuild": "^1.10.1",
     "eslint": "~5.16.0",
     "eslint-config-trendmicro": "~1.4.1",
