--- a/package.json
+++ b/package.json
@@ -232,9 +232,9 @@
 		"qs": "~6.7.0",
 		"range_check": "~1.4.0",
 		"rc-slider": "~8.6.9",
-		"react": "~15.6.2",
+		"react": "~16.13.1",
 		"react-bootstrap": "~0.32.1",
-		"react-dom": "~15.6.2",
+		"react-dom": "~16.3.1",
 		"react-dropzone": "~4.2.13",
 		"react-facebook-loading": "~0.6.2",
 		"react-final-form": "~3.7.0",
@@ -292,6 +292,7 @@
 		"@babel/preset-env": "~7.4.3",
 		"@babel/preset-react": "~7.0.0",
 		"@babel/register": "~7.4.0",
+		"@electron/rebuild": "^3.6.0",
 		"@trendmicro/babel-config": "~1.0.0-alpha",
 		"babel-core": "~7.0.0-bridge.0",
 		"babel-eslint": "~10.0.1",
@@ -307,7 +308,6 @@
 		"dotenv": "~7.0.0",
 		"electron": "~4.2.12",
 		"electron-builder": "~22.8.1",
-		"electron-rebuild": "^1.10.1",
 		"eslint": "~5.16.0",
 		"eslint-config-trendmicro": "~1.4.1",
 		"eslint-import-resolver-webpack": "~0.11.1",
@@ -350,11 +350,5 @@
 		"webpack-manifest-plugin": "~2.0.4",
 		"webpack-node-externals": "~1.7.2",
 		"write-file-webpack-plugin": "~4.5.0"
-	},
-	"pre-push": [
-		"eslint:debug"
-	],
-	"resolutions": {
-		"colors": "1.0.x"
 	}
 }
